slab-mono variants

--- a/config.json
+++ b/config.json
@@ -2,59 +2,38 @@
 	"prefix": "sarasa",
 	"CVT_PADDING": 300,
 
-	"familyOrder": ["gothic", "ui", "mono", "monoT", "term"],
+	"familyOrder": ["monoslab", "typeslab", "termslab"],
 	"families": {
-		"gothic": {
-			"isMono": false,
-			"latinGroup": "noto-sans",
-			"naming": {
-				"en_US": "Sarasa Gothic",
-				"zh_CN": "更纱黑体",
-				"zh_TW": "更紗黑體",
-				"ja_JP": "更紗ゴシック"
-			}
-		},
-		"ui": {
-			"isPWID": true,
-			"isMono": false,
-			"latinGroup": "noto-sans",
-			"naming": {
-				"en_US": "Sarasa UI",
-				"zh_CN": "更纱黑体 UI",
-				"zh_TW": "更紗黑體 UI",
-				"ja_JP": "更紗ゴシック UI"
-			}
-		},
-		"mono": {
+		"monoslab": {
 			"isMono": true,
-			"latinGroup": "iosevka",
+			"latinGroup": "iosevka-slab",
 			"naming": {
-				"en_US": "Sarasa Mono",
-				"zh_CN": "等距更纱黑体",
-				"zh_TW": "等距更紗黑體",
-				"ja_JP": "更紗等幅ゴシック"
+				"en_US": "Sarasa Mono Slab",
+				"zh_CN": "等距更纱黑体 Slab",
+				"zh_TW": "等距更紗黑體 Slab",
+				"ja_JP": "更紗等幅ゴシック Slab"
 			}
 		},
-		"monoT": {
+		"typeslab": {
 			"isMono": true,
 			"isType": true,
-			"latinGroup": "iosevka",
+			"latinGroup": "iosevka-slab",
 			"naming": {
-				"en_US": "Sarasa Mono T",
-				"zh_CN": "等距更纱黑体 T",
-				"zh_TW": "等距更紗黑體 T",
-				"ja_JP": "更紗等幅ゴシック T"
+				"en_US": "Sarasa Mono Type Slab",
+				"zh_CN": "等距更纱黑体 Type Slab",
+				"zh_TW": "等距更紗黑體 Type Slab",
+				"ja_JP": "更紗等幅ゴシック Type Slab"
 			}
 		},
-		"term": {
+		"termslab": {
 			"isMono": true,
-			"latinGroup": "iosevka-term",
+			"latinGroup": "iosevka-term-slab",
 			"isTerm": true,
 			"naming": {
-				"en_US": "Sarasa Term",
-				"zh_CN": "Sarasa Term",
-				"zh_TW": "Sarasa Term",
-				"ja_JP": "Sarasa Term"
+				"en_US": "Sarasa Term Slab",
+				"zh_CN": "Sarasa Term Slab",
+				"zh_TW": "Sarasa Term Slab",
+				"ja_JP": "Sarasa Term Slab"
 			}
 		}
 	},
